--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit==0.61
-matplotlib==3.2.1
-pandas==1.0.4
-scikit-learn==0.23.1
-statsmodels==0.11.1
+matplotlib==3.1.3
+numpy==1.18.1
+pandas==1.0.3
+scikit-learn==0.22.1
 scipy==1.4.1
+seaborn==0.10.1
+statsmodels==0.11.1
+streamlit==0.61
